# Lazyparser

./: .gitignore  .travis.yml  404.html  LICENSE.txt  MANIFEST.in  README.md  documentation.html  genindex.html  index.html  lazyparser.html  lazyparser.py  license.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html  search.html  searchindex.js  setup.py  test.py  update_notes.md
.github/workflows/: docs.yml  publish.yml  run_test.yml
_sources/: lazyparser.rst.txt
doc/: Makefile  make.bat
doc/source/: License.txt  conf.py  index.rst  lazyparser.rst  license.rst
docs/: documentation.md  index.md  reference.md
docs/documentation/: lazyparser.md
docs/reference/: index.md
lazyparser/: lazyparser.py
search/: search_index.json
src/: lazyparser.py  test.py
