[project]
name = "lazyparser"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich-click>=1.8.8"]

[project.optional-dependencies]
test = ["pytest>=8.3.5", "pytest-cov>=6.1.1"]
docs = [
    "mkdocs-material>=9.6.11",
    "mkdocstrings-python>=1.16.10",
]
